--- a/homework5.html
+++ b/homework5.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="utf-8">
     <link rel="shortcut icon" type="image/png" href="images/logo_icon.png"/>
-
     <link rel="stylesheet" type="text/css" href="css/html5reset.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <link href="https://fonts.googleapis.com/css?family=Raleway:200&display=swap" rel="stylesheet">
+    <meta name = "viewport" content = "width=device-width, initial-scale=1.0">
     <title>Super Slick Co.</title>
   </head>
   <body>
